# handy

./: .gitignore
firmware/: Cargo.toml  Makefile
firmware/.cargo/: config.toml
firmware/src/: audio.rs  control_output.rs  lib.rs  main.rs  queue_utils.rs  random_generator.rs  startup_sequence.rs  system.rs
firmware/src/control_input/: buttons.rs  cvs.rs  debouncer.rs  gates.rs  mod.rs  one_pole_filter.rs  pots.rs  switch.rs
firmware/tests/: diagnostics.rs
hardware/: .gitignore  Custom.kicad_sym  Module.kicad_pcb  Module.kicad_pro  Module.kicad_sch  sym-lib-table
hardware/Custom.pretty/: Daisy_Patch_SM.kicad_mod  Layout.kicad_mod  Rotary_Switch_8_Alpha.kicad_mod
